# wago-db2-csv-downloader

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/config/: mod.rs
src/data/: builds.rs  locales.rs  mod.rs  tables.rs
src/entities/: build.rs  mod.rs  tables.rs
src/handlers/: build.rs  locale.rs  mod.rs
src/services/: download_task.rs  downloader.rs  mod.rs
src/utils/: file.rs  mod.rs  rate_limiter.rs
