[package]
name = "wago-db2-csv-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
regex = "1.5"
anyhow = "1.0"
dialoguer = "0.11.0"
indicatif = "0.17.8" 
mockito = "1.5.0"
